Write tests for and implement isAnagram function for frequency counter challenge.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
 
 <script src="tinytest.js"></script>
-<script src="index.js"></script>
+<script src="algorithms/anagram.js"></script>
 </body>
 </html>
