Write tests and implement countUniqueValues function for multiple pointers challenge.

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 
 <script src="tinytest.js"></script>
 <script src="algorithms/anagram.js"></script>
+<script src="algorithms/multiplePointers.js"></script>
 </body>
 </html>
