Write tests for and implement solution for sliding window challenge.

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 <script src="tinytest.js"></script>
 <script src="algorithms/anagram.js"></script>
 <script src="algorithms/multiplePointers.js"></script>
+<script src="algorithms/slidingWindow.js"></script>
 </body>
 </html>
