Write tests for and implements solutions for recursion easy problem set.

--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
 <script src="algorithms/anagram.js"></script>
 <script src="algorithms/multiplePointers.js"></script>
 <script src="algorithms/slidingWindow.js"></script>
+<script src="algorithms/recursion/power.js"></script>
+<script src="algorithms/recursion/factorial.js"></script>
+<script src="algorithms/recursion/productOfArray.js"></script>
+<script src="algorithms/recursion/recursiveRange.js"></script>
+<script src="algorithms/recursion/fibonacci.js"></script>
 </body>
 </html>
