Write tests and implements solutions for a linear search algorithm.

--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 <body>
 
 <script src="tinytest.js"></script>
-<script src="algorithms/anagram.js"></script>
-<script src="algorithms/multiplePointers.js"></script>
-<script src="algorithms/slidingWindow.js"></script>
-<script src="algorithms/recursion/power.js"></script>
-<script src="algorithms/recursion/factorial.js"></script>
-<script src="algorithms/recursion/productOfArray.js"></script>
-<script src="algorithms/recursion/recursiveRange.js"></script>
-<script src="algorithms/recursion/fibonacci.js"></script>
+<!--<script src="algorithms/anagram.js"></script>-->
+<!--<script src="algorithms/multiplePointers.js"></script>-->
+<!--<script src="algorithms/slidingWindow.js"></script>-->
+<!--<script src="algorithms/recursion/power.js"></script>-->
+<!--<script src="algorithms/recursion/factorial.js"></script>-->
+<!--<script src="algorithms/recursion/productOfArray.js"></script>-->
+<!--<script src="algorithms/recursion/recursiveRange.js"></script>-->
+<!--<script src="algorithms/recursion/fibonacci.js"></script>-->
+<script src="algorithms/searchingAlgorithms/linearSearch.js"></script>
+
 </body>
 </html>
