Write tests and implements solutions for a binary search algorithm.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <!--<script src="algorithms/recursion/productOfArray.js"></script>-->
 <!--<script src="algorithms/recursion/recursiveRange.js"></script>-->
 <!--<script src="algorithms/recursion/fibonacci.js"></script>-->
-<script src="algorithms/searchingAlgorithms/linearSearch.js"></script>
-
+<!--<script src="algorithms/searchingAlgorithms/linearSearch.js"></script>-->
+<script src="algorithms/searchingAlgorithms/binarySearch.js"></script>
 </body>
 </html>
