Write tests and implements solutions for a bubble sort.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <!--<script src="algorithms/recursion/recursiveRange.js"></script>-->
 <!--<script src="algorithms/recursion/fibonacci.js"></script>-->
 <!--<script src="algorithms/searchingAlgorithms/linearSearch.js"></script>-->
-<script src="algorithms/searchingAlgorithms/binarySearch.js"></script>
+<!--<script src="algorithms/searchingAlgorithms/binarySearch.js"></script>-->
+<script src="algorithms/sorting/bubbleSort.js"></script>
 </body>
 </html>
