Implement selection sort.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <!--<script src="algorithms/recursion/fibonacci.js"></script>-->
 <!--<script src="algorithms/searchingAlgorithms/linearSearch.js"></script>-->
 <!--<script src="algorithms/searchingAlgorithms/binarySearch.js"></script>-->
-<script src="algorithms/sorting/bubbleSort.js"></script>
+<!--<script src="algorithms/sorting/bubbleSort.js"></script>-->
+<script src="algorithms/sorting/selectionSort.js"></script>
 </body>
 </html>
