Implement insertion sort.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <!--<script src="algorithms/searchingAlgorithms/linearSearch.js"></script>-->
 <!--<script src="algorithms/searchingAlgorithms/binarySearch.js"></script>-->
 <!--<script src="algorithms/sorting/bubbleSort.js"></script>-->
-<script src="algorithms/sorting/selectionSort.js"></script>
+<!--<script src="algorithms/sorting/selectionSort.js"></script>-->
+<script src="algorithms/sorting/insertionSort.js"></script>
 </body>
 </html>
