--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 <!--<script src="algorithms/searchingAlgorithms/binarySearch.js"></script>-->
 <!--<script src="algorithms/sorting/bubbleSort.js"></script>-->
 <!--<script src="algorithms/sorting/selectionSort.js"></script>-->
-<script src="algorithms/sorting/insertionSort.js"></script>
+<!--<script src="algorithms/sorting/insertionSort.js"></script>-->
+<script src="algorithms/sorting/mergeSort.js"></script>
+
 </body>
 </html>
